<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Alexandria</string>

    <!-- Menu Items -->
    <string name="books">List of Books</string>
    <string name="scan">Scan/Add a Book</string>
    <string name="about">About this App</string>

    <string name="navigation_drawer_open" >Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="scan_button">Scan</string>
    <string name="input_hint">Insert ISBN-13. Digits only.</string>
    <string name="book_cover">Bookcover</string>

    <string name="ok_button">Next</string>
    <string name="cancel_button">Cancel</string>
    <string name="not_found">No Book found</string>
    <string name="search">Search</string>
    <string name="delete">Delete Book</string>
    <string name="pref_startScreen">Select Startscreen</string>
    <string name="title_activity_settings">Settings</string>
    <string name="action_share">Share</string>
    <string name="back_button">go back</string>
    <string name="share_text">A must read book: </string>

    <string name="net_error">Network Error... Please Connect to a Working Network!</string>
    <string name="error_handler">Network Error.... Retry!</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="about_text">This application gets book information from a Google API. All titles, cover images, and author information come from there.
    The original version of this app was built by Sascha Jaschke, and a modified version is given to students in the Udacity Android Nanodegree program. </string>
    <string name="scan_settings">Camera Scan Settings :</string>
    <string name="autofocus">Use AutoFocus</string>
    <string name="flash">Use Flash</string>
    <string name="no_camera_permission">Camera Access Denied</string>
    <string name="ok">Ok</string>
    <string name="low_storage_error">Storage Insufficient</string>
    <string name="permission_camera_rationale">Access Camera?</string>
    <string name="pref_use_flash">Use Flash</string>
    <string name="pref_cam_setting">Camera Scan Settings</string>
</resources>
